--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,71 @@ body {
   padding: 0;
 }
 
+a#menu svg {
+  width: 40px;
+  fill: #000;
+  position: static;
+  z-index: 3
+}
+
+nav, main {
+  padding: 1em;
+  box-sizing: border-box;
+}
+main {
+  width: 100%;
+  height: 100%;
+}
+
+nav {
+  width: 300px;
+  height: 100%;
+  position: absolute;
+  /* This trasform moves the drawer off canvas. */
+  -webkit-transform: translate(-300px, 0);
+  transform: translate(-300px, 0);
+  /* Optionally, we animate the drawer. */
+  transition: transform 0.3s ease;
+  z-index: 2;
+}
+nav.open {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+
+/*This is mostly based on the udacity course on off-canvas*/
+@media screen and (min-width: 1020px) {
+          /* We open the drawer. */
+          nav {
+            position:absolute;
+            -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+            z-index: 2;
+          }
+
+          /* We use Flexbox on the parent. */
+          body {
+            display: -webkit-flex;
+            display: flex;
+            -webkit-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+          }
+
+          main {
+            width: auto;
+            /* Flex-grow streches the main content to fill all available space. */
+            flex-grow: 1;
+          }
+}
+
 h3 {
   margin-top: 10px;
   margin-bottom: 2px;
 }
 
 .container {
+  width: 100%;
   height: 100%;
   position: relative;
 }
@@ -21,22 +80,26 @@ li {
 }
 
 #map {
-  bottom: 0px;
   height: 100%;
-  left: 362px;
+  width: 100%;
   position: absolute;
-  right: 0px;
+  z-index: 1;
+
 }
 
  .options-box {
-   background: #fff;
-   /*border: 1px solid #999;*/
-   border-radius: 3px;
+   font-size: 1.5em;
+   background: #7694e2;
+   border: 1px solid #999;
    height: 100%;
-   line-height: 35px;
+   /*line-height: 35px;*/
    padding: 10px 10px 30px 10px;
    text-align: left;
-   width: 340px;
+   /*width: 340px;*/
    /*transform: translate(-340px, 0);
    transition: transform 0.3s ease;*/
+ }
+
+ a:hover {
+   background-color: #455d9b;
  }
